--- a/McsaMeetsMailerTests/McsaMeetsMailerTests.csproj
+++ b/McsaMeetsMailerTests/McsaMeetsMailerTests.csproj
@@ -5,6 +5,7 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <ApplicationIcon />
     <StartupObject />
+    <LangVersion>7.3</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
