--- a/McsaMeetsMailerTests/McsaMeetsMailerTests.csproj
+++ b/McsaMeetsMailerTests/McsaMeetsMailerTests.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.1.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
     <PackageReference Include="NSubstitute" Version="4.2.0" />
     <PackageReference Include="NUnit" Version="3.12.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.13.0" />
@@ -17,6 +18,12 @@
 
   <ItemGroup>
     <ProjectReference Include="..\McsaMeetsMailer\McsaMeetsMailer.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="TestData\GoogleSheetTestData.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
