--- a/McsaMeetsMailer/McsaMeetsMailer.csproj
+++ b/McsaMeetsMailer/McsaMeetsMailer.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <None Include="wwwroot\css\fullSchedulePreview.less" />
+    <None Include="wwwroot\templates\FullScheduleEmailTemplate.html" />
   </ItemGroup>
 
   <ItemGroup>
