--- a/McsaMeetsMailer/McsaMeetsMailer.csproj
+++ b/McsaMeetsMailer/McsaMeetsMailer.csproj
@@ -6,6 +6,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="web.config" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="web.config" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="web.config" />
     <None Include="wwwroot\css\fullSchedulePreview.less" />
     <None Include="wwwroot\templates\FullScheduleEmailTemplate.html" />
   </ItemGroup>
