--- a/McsaMeetsMailerTests/McsaMeetsMailerTests.csproj
+++ b/McsaMeetsMailerTests/McsaMeetsMailerTests.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Library</OutputType>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <ApplicationIcon />
     <StartupObject />
     <LangVersion>7.3</LangVersion>
